updated word list

--- a/colab-notebooks/colab_textcorrection_ner_nlp.ipynb
+++ b/colab-notebooks/colab_textcorrection_ner_nlp.ipynb
@@ -184,38 +184,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JEoJA83v8ZCU",
-        "outputId": "e2a76e76-30af-48b7-8f75-6a3076087b49"
+        "outputId": "6084503c-2f63-4d25-f554-4ba0560f8598"
       },
       "source": [
-        "# download the DWDS lemma list\n",
+        "# download German word list provided by Marvin J. Wendt\n",
         "dwds_url = \"https://gist.githubusercontent.com/MarvinJWendt/2f4f4154b8ae218600eb091a5706b5f4/raw/36b70dd6be330aa61cd4d4cdfda6234dcb0b8784/wordlist-german.txt\"\n",
         "response = requests.get(dwds_url)\n",
         "\n",
         "if response.status_code == 200:\n",
-        "    # Save the lemma list as a dictionary file\n",
-        "    with open(\"dwds_lemma_list.txt\", \"w\", encoding=\"utf-8\") as file:\n",
+        "    # Save the word list as a local file\n",
+        "    with open(\"word_list.txt\", \"w\", encoding=\"utf-8\") as file:\n",
         "        file.write(response.text)\n",
-        "    print(\"DWDS lemma list successfully downloaded.\")\n",
+        "    print(\"Word list successfully downloaded.\")\n",
         "else:\n",
-        "    print(\"Failed to download DWDS lemma list.\")\n",
+        "    print(\"Failed to download word list.\")\n",
         "\n",
         "# change SpellChecker language from English to German\n",
         "\n",
         "spell = SpellChecker(language=None)\n",
-        "spell.word_frequency.load_text_file(\"dwds_lemma_list.txt\")\n",
-        "print(\"DWDS dictionary loaded into PySpellChecker.\")"
+        "spell.word_frequency.load_text_file(\"word_list.txt\")\n",
+        "print(\"German word list loaded into PySpellChecker.\")"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DWDS lemma list successfully downloaded.\n",
-            "DWDS dictionary loaded into PySpellChecker.\n"
+            "Word list successfully downloaded.\n",
+            "German word list loaded into PySpellChecker.\n"
           ]
         }
       ],
-      "execution_count": 7
+      "execution_count": 16
     },
     {
       "cell_type": "markdown",
